[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
# Ruffはリンターとして使用（フォーマッターとしては使用しない）
line-length = 100
target-version = "py39"
select = ["E", "F", "I"]
ignore = ["E501"]  # line too long (Blackが処理するため)
exclude = ["cdk.out/", ".venv/", "asset.*", "lambda/", "layers/"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
follow_imports = "silent"
exclude = ["cdk.out/", ".venv/", "asset.*", "lambda/", "layers/"]

[[tool.mypy.overrides]]
module = "shiftmaking_ns_v1_aws.shiftmaking_ns_v1_aws_stack"
disable_error_code = ["list-item"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"